Bug 164676 - open folder in tabs crashes with empty folder
Summary: open folder in tabs crashes with empty folder
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: bookmarks (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-22 18:24 UTC by mario tuling
Modified: 2008-06-25 22:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mario tuling 2008-06-22 18:24:50 UTC
Version:           r822278 (using Devel)
Installed from:    Compiled sources
Compiler:          4.1.2 
OS:                Linux

if you make an empty bookmark folder an then try to "open folder in tabs", konqueror crashes, perhaps this option could be disabled.

backtrace: 

#5  0x00002af3367d5a4d in QUrl::scheme (this=0xa6e382) at io/qurl.cpp:4004
#6  0x00002af3334daec6 in KUrl::prettyUrl (this=0xa6e382,
    trailing=KUrl::LeaveTrailingSlash)
    at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdecore/io/kurl.cpp:979
#7  0x00002af3334d2551 in operator<< (s=@0x7fff7868fd20, url=@0xa6e382)
    at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdecore/io/kdebug.cpp:626
#8  0x00002af3326ae0fd in KonqMainWindow::openUrl (this=0x7477b0, _view=0x0,
    _url=@0xa6e382, _mimeType=@0x7fff78690070, req=@0x7fff7868ffe0,
    trustedSource=false)
    at /var/tmp/portage/kde-base/konqueror-9999/work/konqueror/apps/konqueror/src/konqmainwindow.cpp:503
#9  0x00002af3326af034 in KonqExtendedBookmarkOwner::openFolderinTabs (
    this=0x7c1330, grp=<value optimized out>)
    at /var/tmp/portage/kde-base/konqueror-9999/work/konqueror/apps/konqueror/src/konqmainwindow.cpp:4408
#10 0x00002af33310add8 in KBookmarkMenu::slotOpenFolderInTabs (this=0x852e50)
    at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kio/bookmarks/kbookmarkmenu.cc:586
#11 0x00002af33310d2ca in KBookmarkMenu::qt_metacall (this=0x852e50,
    _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0x7fff78690250)
    at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs_build/kio/kbookmarkmenu.moc:80
#12 0x00002af33682dbaa in QMetaObject::activate (sender=0x115ad50,
    from_signal_index=<value optimized out>, to_signal_index=6, argv=0xd121b0)
    at kernel/qobject.cpp:3001
#13 0x00002af33736629b in QAction::triggered (this=0x0, _t1=false)
    at .moc/debug-shared/moc_qaction.cpp:216
....
Comment 1 Maksim Orlovich 2008-06-25 22:54:19 UTC
SVN commit 824464 by orlovich:

Fix crash when doing "open folder in tabs" on an empty folder.
It needs an emptyness check since the last tab is handled specially,
wrt to placement in front, so the below assumes there is at least one.

BUG:164676



 M  +3 -0      konqmainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=824464