Fix crash when doing "open folder in tabs" on an empty folder. It needs an emptyness check since the last tab is handled specially, wrt to placement in front, so the below assumes there is at least one.

BUG:164676


svn path=/trunk/KDE/kdebase/apps/; revision=824464